# child-content-guardian-agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
config/: thresholds.json
docs/: DASHBOARD-BLUEPRINT.md  DEPLOYMENT.md  THREAT-MODEL.md
extension/: manifest.json
extension/scripts/: content.js
src/api/: main.py
src/core/: decision_engine.py  knowledge_pipeline.py  llm_engine.py  report_generator.py
src/database/: models.py  repo.py
src/models/: benchmark.py  classifiers.py  feedback_loop.py  multimodal.py
tests/: test_core.py
